fix login alignment

--- a/src/app/modules/login/components/login-form/login-form.component.css
+++ b/src/app/modules/login/components/login-form/login-form.component.css
@@ -28,6 +28,7 @@ body {
     height: auto;
     margin-bottom: 20px;
     padding-bottom: 20px;
+    width:100%;
   }
 }
 .container {
